--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Adapter Library"
 include ':app'
-include ':mylibrary'
+include ':adapter'
