--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -28,10 +28,14 @@ android {
 
 dependencies {
     implementation 'com.github.ingenigit:or2goCore:1.1.8'
+    implementation 'com.github.ingenigit:DistanceCalculationLibrary:1.0.2'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
